--- a/index.html
+++ b/index.html
@@ -1,153 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>School Games Hub</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>GameHub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
+    :root {
+      --bg: #0b0f1a;
+      --card: #12182b;
+      --accent: #4da6ff;
+      --text: #eaeaf0;
+      --muted: #9aa4bf;
+    }
+
+    * {
+      box-sizing: border-box;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
+
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f0f0f;
-      color: white;
+      background: linear-gradient(135deg, #0b0f1a, #0e1430);
+      color: var(--text);
+      min-height: 100vh;
     }
 
     header {
-      background: #111;
-      padding: 20px;
+      padding: 30px 20px;
       text-align: center;
-      border-bottom: 2px solid #222;
+      border-bottom: 1px solid #1c2340;
     }
 
     header h1 {
       margin: 0;
-      font-size: 32px;
-      color: #00ffcc;
+      font-size: 36px;
+      font-weight: 700;
+      color: var(--accent);
     }
 
-    .container {
-      padding: 20px;
+    header p {
+      margin-top: 8px;
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    main {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 30px 20px;
     }
 
     h2 {
-      margin-top: 40px;
-      color: #00ffcc;
+      margin-bottom: 15px;
+      font-size: 22px;
     }
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-      gap: 15px;
-      margin-top: 15px;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 20px;
     }
 
     .card {
-      background: #1a1a1a;
-      padding: 15px;
-      border-radius: 8px;
-      text-align: center;
+      background: var(--card);
+      border-radius: 14px;
+      padding: 16px;
       cursor: pointer;
-      transition: 0.2s;
-      border: 1px solid #222;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      border: 1px solid #1e2647;
     }
 
     .card:hover {
-      background: #222;
-      transform: scale(1.05);
+      transform: translateY(-5px);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+    }
+
+    .thumb {
+      width: 100%;
+      height: 140px;
+      background: linear-gradient(135deg, #1e90ff, #005eff);
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 20px;
+      color: white;
+      margin-bottom: 12px;
     }
 
     .card span {
       display: block;
-      margin-top: 10px;
-      font-weight: bold;
+      font-size: 16px;
+      font-weight: 600;
+    }
+
+    .card small {
+      color: var(--muted);
+      font-size: 13px;
     }
 
     /* MODAL */
     .modal {
-      display: none;
       position: fixed;
       inset: 0;
-      background: rgba(0,0,0,0.8);
-      z-index: 999;
+      background: rgba(5, 8, 20, 0.9);
+      display: none;
       align-items: center;
       justify-content: center;
+      z-index: 1000;
     }
 
     .modal-content {
-      width: 90%;
-      height: 85%;
+      width: 95%;
+      max-width: 900px;
       background: #000;
-      position: relative;
-      border-radius: 10px;
+      border-radius: 16px;
       overflow: hidden;
+      position: relative;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.6);
+    }
+
+    .modal-header {
+      background: #0e1430;
+      padding: 10px 14px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .modal-header span {
+      font-weight: 600;
     }
 
     .close {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      font-size: 28px;
       cursor: pointer;
-      color: white;
-      z-index: 10;
+      font-size: 22px;
+      color: #fff;
     }
 
     iframe {
       width: 100%;
-      height: 100%;
+      height: 520px;
       border: none;
+      background: black;
+    }
+
+    @media (max-width: 600px) {
+      iframe {
+        height: 420px;
+      }
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>School Games Hub</h1>
-</header>
+  <header>
+    <h1>GameHub</h1>
+    <p>Classic games, instant play</p>
+  </header>
 
-<div class="container">
-  <h2>🎮 RETRO</h2>
-  <div class="grid" id="games"></div>
-</div>
+  <main>
+    <h2>🎮 Retro</h2>
 
-<div class="modal" id="modal">
-  <div class="modal-content">
-    <div class="close" onclick="closeGame()">✖</div>
-    <iframe id="gameFrame"></iframe>
+    <div class="grid">
+      <div class="card" onclick="openGame()">
+        <div class="thumb">SONIC</div>
+        <span>Sonic Classic Heroes</span>
+        <small>SEGA Mega Drive</small>
+      </div>
+    </div>
+  </main>
+
+  <!-- MODAL -->
+  <div class="modal" id="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <span>Sonic Classic Heroes</span>
+        <div class="close" onclick="closeGame()">✕</div>
+      </div>
+
+      <iframe
+        src=""
+        id="gameFrame"
+        allowfullscreen="true"
+        webkitallowfullscreen="true"
+        mozallowfullscreen="true"
+        scrolling="no">
+      </iframe>
+    </div>
   </div>
-</div>
 
-<script>
-  const games = [
-    { name: "DOOM (1993)", url: "https://archive.org/embed/msdos_doom_1993" },
-    { name: "Wolfenstein 3D", url: "https://archive.org/embed/msdos_wolf3d" },
-    { name: "Prince of Persia", url: "https://archive.org/embed/msdos_prince_of_persia_1990" },
-    { name: "Oregon Trail", url: "https://archive.org/embed/oregon-trail-deluxe" },
-    { name: "Pac-Man", url: "https://archive.org/embed/pacman" },
-    { name: "Space Invaders", url: "https://archive.org/embed/spaceinvaders" }
-  ];
+  <script>
+    function openGame() {
+      const frame = document.getElementById("gameFrame");
+      frame.src = "https://www.retrogames.cc/embed/42046-sonic-classic-heroes.html";
+      document.getElementById("modal").style.display = "flex";
+    }
 
-  const container = document.getElementById("games");
-
-  games.forEach(game => {
-    const div = document.createElement("div");
-    div.className = "card";
-    div.innerHTML = `<span>${game.name}</span>`;
-    div.onclick = () => openGame(game.url);
-    container.appendChild(div);
-  });
-
-  function openGame(url) {
-    document.getElementById("gameFrame").src = url;
-    document.getElementById("modal").style.display = "flex";
-  }
-
-  function closeGame() {
-    document.getElementById("gameFrame").src = "";
-    document.getElementById("modal").style.display = "none";
-  }
-</script>
+    function closeGame() {
+      const frame = document.getElementById("gameFrame");
+      frame.src = "";
+      document.getElementById("modal").style.display = "none";
+    }
+  </script>
 
 </body>
 </html>
