--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
   <style>
     :root {
-      --bg: #0b0f1a;
-      --card: #12182b;
-      --accent: #4da6ff;
-      --text: #eaeaf0;
-      --muted: #9aa4bf;
+      --bg: #0a0d16;
+      --card: #12162a;
+      --accent: #00ffd5;
+      --text: #e9ecf1;
+      --muted: #9aa3c7;
     }
 
     * {
@@ -21,28 +21,28 @@
 
     body {
       margin: 0;
-      background: linear-gradient(135deg, #0b0f1a, #0e1430);
+      background: radial-gradient(circle at top, #0f1430, #06080f);
       color: var(--text);
       min-height: 100vh;
     }
 
     header {
-      padding: 30px 20px;
+      padding: 28px 20px;
       text-align: center;
-      border-bottom: 1px solid #1c2340;
+      border-bottom: 1px solid #1a2040;
     }
 
     header h1 {
       margin: 0;
       font-size: 36px;
-      font-weight: 700;
+      font-weight: 800;
       color: var(--accent);
     }
 
     header p {
-      margin-top: 8px;
-      color: var(--muted);
+      margin-top: 6px;
       font-size: 14px;
+      color: var(--muted);
     }
 
     main {
@@ -52,8 +52,11 @@
     }
 
     h2 {
-      margin-bottom: 15px;
+      margin-bottom: 18px;
       font-size: 22px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
 
     .grid {
@@ -63,81 +66,80 @@
     }
 
     .card {
-      background: var(--card);
-      border-radius: 14px;
+      background: linear-gradient(180deg, #151a35, #0f1329);
+      border-radius: 16px;
       padding: 16px;
       cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      border: 1px solid #1e2647;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+      border: 1px solid #1c2250;
     }
 
     .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+      transform: translateY(-6px);
+      box-shadow: 0 18px 40px rgba(0,0,0,0.6);
     }
 
     .thumb {
-      width: 100%;
       height: 140px;
+      border-radius: 12px;
       background: linear-gradient(135deg, #1e90ff, #005eff);
-      border-radius: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-weight: 700;
-      font-size: 20px;
+      font-weight: 900;
+      font-size: 22px;
       color: white;
       margin-bottom: 12px;
+      letter-spacing: 1px;
     }
 
     .card span {
       display: block;
       font-size: 16px;
-      font-weight: 600;
+      font-weight: 700;
     }
 
     .card small {
-      color: var(--muted);
       font-size: 13px;
+      color: var(--muted);
     }
 
     /* MODAL */
     .modal {
       position: fixed;
       inset: 0;
-      background: rgba(5, 8, 20, 0.9);
+      background: rgba(4, 6, 16, 0.9);
       display: none;
       align-items: center;
       justify-content: center;
-      z-index: 1000;
+      z-index: 9999;
     }
 
     .modal-content {
       width: 95%;
-      max-width: 900px;
+      max-width: 960px;
       background: #000;
-      border-radius: 16px;
+      border-radius: 18px;
       overflow: hidden;
-      position: relative;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.6);
+      box-shadow: 0 30px 80px rgba(0,0,0,0.7);
     }
 
     .modal-header {
-      background: #0e1430;
-      padding: 10px 14px;
+      background: #0d122b;
+      padding: 12px 16px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
     .modal-header span {
-      font-weight: 600;
+      font-weight: 700;
     }
 
     .close {
       cursor: pointer;
       font-size: 22px;
-      color: #fff;
+      user-select: none;
     }
 
     iframe {
@@ -156,55 +158,53 @@
 </head>
 <body>
 
-  <header>
-    <h1>GameHub</h1>
-    <p>Classic games, instant play</p>
-  </header>
+<header>
+  <h1>GameHub</h1>
+  <p>Instant browser games</p>
+</header>
 
-  <main>
-    <h2>🎮 Retro</h2>
+<main>
+  <h2>🎮 Retro</h2>
 
-    <div class="grid">
-      <div class="card" onclick="openGame()">
-        <div class="thumb">SONIC</div>
-        <span>Sonic Classic Heroes</span>
-        <small>SEGA Mega Drive</small>
-      </div>
-    </div>
-  </main>
-
-  <!-- MODAL -->
-  <div class="modal" id="modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <span>Sonic Classic Heroes</span>
-        <div class="close" onclick="closeGame()">✕</div>
-      </div>
-
-      <iframe
-        src=""
-        id="gameFrame"
-        allowfullscreen="true"
-        webkitallowfullscreen="true"
-        mozallowfullscreen="true"
-        scrolling="no">
-      </iframe>
+  <div class="grid">
+    <div class="card" onclick="openGame()">
+      <div class="thumb">SONIC</div>
+      <span>Sonic Classic Heroes</span>
+      <small>SEGA Mega Drive</small>
     </div>
   </div>
+</main>
 
-  <script>
-    function openGame() {
-      const frame = document.getElementById("gameFrame");
-      frame.src = "https://www.retrogames.cc/embed/42046-sonic-classic-heroes.html";
-      document.getElementById("modal").style.display = "flex";
-    }
+<div class="modal" id="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <span>Sonic Classic Heroes</span>
+      <div class="close" onclick="closeGame()">✕</div>
+    </div>
 
-    function closeGame() {
-      const frame = document.getElementById("gameFrame");
-      frame.src = "";
-      document.getElementById("modal").style.display = "none";
-    }
-  </script>
+    <iframe
+      id="gameFrame"
+      allowfullscreen="true"
+      webkitallowfullscreen="true"
+      mozallowfullscreen="true"
+      scrolling="no">
+    </iframe>
+  </div>
+</div>
+
+<script>
+  function openGame() {
+    const frame = document.getElementById("gameFrame");
+    frame.src = "https://www.retrogames.cc/embed/42046-sonic-classic-heroes.html";
+    document.getElementById("modal").style.display = "flex";
+  }
+
+  function closeGame() {
+    const frame = document.getElementById("gameFrame");
+    frame.src = "";
+    document.getElementById("modal").style.display = "none";
+  }
+</script>
 
 </body>
 </html>
